# Silent_Pass

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.old  README.md  TODO.md  chrome.c  chrome.h  clean.sh  compile_all.sh  firefox.c  firefox.h  flake.nix  main.c  main.h  shell.nix
cmake/: FindNSS.cmake
includes/: args.h  base64.h  chrome.h  chrome_linux.h  chrome_win.h  explorer.h  filezilla.h  firefox.h  firefox_linux.h  firefox_win.h  functions.h  git.h  json.h  log.h  log_win.h  main.h  specific.h  specific_linux.h  xml.h
includes/libxml/: encoding.h
includes/linux/: chrome_linux.h  firefox_linux.h  git_linux.h  log_linux.h
includes/utilities/: xml.h
includes/win32/: chrome_win.h  filezilla_win.h  firefox_win.h  git_win.h  specific_win.h
lib/openssl-1.1.1d_2-win32-mingw/openssl-1.1.1d-win32-mingw/: CHANGES.txt  NEWS.txt  README.txt
lib/src/: argtable3.c  cJSON.c  dictionary.c  iniparser.c
src/: chrome.c  filezilla.c  firefox.c  git.c  main.c
src/linux/: args.c  chrome.c  filezilla.c  firefox.c  git.c  specific.c
src/utilities/: base64.c  functions.c  json.c  log.c  xml.c
src/utilities/log/: log.c  log_linux.c  log_win.c
src/win32/: args.c  chrome.c  explorer.c  filezilla.c  firefox.c  git.c  specific.c
